--- a/highchart-ui/resources/public/index.html
+++ b/highchart-ui/resources/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
@@ -10,6 +10,7 @@
       <h2>Figwheel template</h2>
       <p>Checkout your developer console.</p>
     </div>
-    <script src="js/compiled/web_frontend_starter.js" type="text/javascript"></script>
+    <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
+    <script src="js/compiled/highchart_ui.js" type="text/javascript"></script>
   </body>
 </html>
