--- a/email-chart-sender/public/index.html
+++ b/email-chart-sender/public/index.html
@@ -1,6 +1,8 @@
 <html>
 <head></head>
 <body>
-  <h1>hello world</h1>
+  <script type="text/javascript" src="ext/d3/d3.min.js"></script>
+  <script type="text/javascript" src="ext/dimple/dimple.v2.3.0.min.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
